--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a data framework to power reactive apps",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/xorkevin/substation/issues"
   },
-  "homepage": "https://github.com/xorkevin/substation#readme"
+  "homepage": "https://github.com/xorkevin/substation#readme",
+  "devDependencies": {
+    "terser-webpack-plugin": "^2.1.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9"
+  },
+  "dependencies": {
+    "react": "^16.9.0"
+  }
 }
