--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "substation",
   "version": "0.1.0",
   "description": "a data framework to power reactive apps",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "main": "dist/substation.js",
   "sideEffects": false,
   "scripts": {
