--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@xorkevin/substation",
-  "version": "0.1.3",
+  "version": "0.1.3-0",
   "description": "a data framework to power reactive apps",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "main": "dist/substation.js",
+  "main": "index.js",
   "sideEffects": false,
   "scripts": {
-    "build": "webpack --mode production --progress --color",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,28 +22,18 @@
   },
   "homepage": "https://github.com/xorkevin/substation#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "core-js": "^3.6.4",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-loader": "^3.0.3",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^3.0.4",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "prettier": "^1.19.1",
-    "react": "^16.12.0",
-    "terser-webpack-plugin": "^2.3.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2"
+    "react": "^16.13.1"
   },
   "peerDependencies": {
-    "react": "^16.9.0",
-    "core-js": "^3.0.0"
+    "react": "^16.9.0"
   },
   "dependencies": {}
 }
