--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
   },
   "homepage": "https://github.com/xorkevin/substation#readme",
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-loader": "^4.0.2",
+    "@babel/core": "^7.12.9",
+    "@babel/eslint-parser": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.5",
-    "prettier": "^2.0.5",
-    "react": "^16.13.1"
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "react": "^17.0.1"
   },
   "peerDependencies": {
-    "react": "^16.9.0"
+    "react": "^17.0.1"
   },
   "dependencies": {}
 }
