--- a/package.json
+++ b/package.json
@@ -22,19 +22,18 @@
   },
   "homepage": "https://github.com/xorkevin/substation#readme",
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
+    "@babel/core": "^7.13.10",
+    "@babel/eslint-parser": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "react": "^17.0.1"
+    "react": "17.0.1"
   },
   "peerDependencies": {
     "react": "^17.0.1"
-  },
-  "dependencies": {}
+  }
 }
