--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "react": "17.0.1"
+    "react": "^17.0.1"
   },
   "peerDependencies": {
     "react": "^17.0.1"
