--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
   },
   "homepage": "https://github.com/xorkevin/substation#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/eslint-parser": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-react": "^7.12.13",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "react": "17.0.1"
+    "react": "^17.0.2"
   },
   "peerDependencies": {
     "react": "^17.0.1"
